--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: partsm
-Version: 1.0-1
+Version: 1.0-2
 Date: 2005/9/3
 Title: Periodic Autoregressive Time Series Models
-Author: Javier López-de-Lacalle <javlacalle@yahoo.es>
-Maintainer: ORPHANED
+Author: Javier Lopez-de-Lacalle <javlacalle@yahoo.es>
+Maintainer: Carlos J. Gil Bellosta <cgb@datanallytics.com>
 Depends: R (>= 2.0.0), methods
 Description: This package performs basic functions to fit and predict periodic autoregressive time series models. These models are discussed in the book P.H. Franses (1996) "Periodicity and Stochastic Trends in Economic Time Series", Oxford University Press. Data set analyzed in that book is also provided.
-License: GPL version 2 or newer. The terms of this license are in a file called COPYING which you should have received with R.
-Packaged: 2009-06-23 07:06:35 UTC; hornik
+License: GPL-2
